--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.7",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-popover": "^1.1.2",
@@ -22,12 +25,14 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.16",
+    "next-themes": "^0.4.3",
     "protenta": "file:",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "recharts": "^2.13.0",
     "socket.io-client": "^4.8.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
