--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.453.0",
-    "next": "14.2.16",
+    "next": "^14.2.23",
     "next-themes": "^0.4.3",
     "protenta": "file:",
     "react": "^18",
