--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "react-hooks/exhaustive-deps": "off",
-    "react-hooks/rules-of-hooks": "off",
-    "react/no-unescaped-entities": "off",
-    "@next/next/no-img-element": "off"
-  }
+  "extends": ["next/core-web-vitals", "next/typescript"]
 }
